# shadow-plugin-tor

./: CMakeLists.txt  LICENSE  README.md  setup
.github/workflows/: build_and_test.yml
resource/: README.md  large-64GB.tar.xz  medium-32GB.tar.xz  minimal.tar.xz  shadowtor-100r-375c-config.tar.xz  shadowtor-200r-750c-config.tar.xz  shadowtor-500r-1800c-config.tar.xz  shadowtor-50r-180c-config.tar.xz  shadowtor-minimal-config.tar.xz  shadowtor-toy-config.tar.xz  small-16GB.tar.xz  tiny-4GB.tar.xz
src/: CMakeLists.txt
src/tor/: CMakeLists.txt  CMakeLists.txt.post035  CMakeLists.txt.pre035  shadow-tor  shadowtor-interpose.c  shadowtor-main.c  shadowtor-plugin.c  shadowtor-preload.c  shadowtor.c  shadowtor.h  tor-plugin.c  tor-preload.c  tor.c
src/torctl/: CMakeLists.txt  torctl-main.c  torctl-plugin.c  torctl.c  torctl.h
src/torflow/: CMakeLists.txt  README.md  USAGE  torflow-aggregator.c  torflow-authority.c  torflow-authority.h  torflow-base.c  torflow-config.c  torflow-config.h  torflow-database.c  torflow-database.h  torflow-event-manager.c  torflow-event-manager.h  torflow-file-client.c  torflow-file-client.h  torflow-file-listener.c  torflow-file-listener.h  torflow-file-server.c  torflow-file-server.h  torflow-fileserver.c  torflow-main.c  torflow-manager.c  torflow-peer.c  torflow-peer.h  torflow-plugin.c  torflow-probe.c  torflow-probe.h  torflow-prober.c  torflow-relay.c  torflow-relay.h  torflow-slice.c  torflow-slice.h  torflow-timer.c  torflow-timer.h  torflow-torctl-client.c  torflow-torctl-client.h  torflow-utility.c  torflow.c  torflow.h
src/torflow/configs/: minimal.config.xml  small.config.xml  tiny.config.xml
src/torflow/example/: authority.torrc  client.torrc  exit.torrc  hosts-direct-2set10.xml  hosts-direct.xml  hosts-tunnel-2set10.xml  hosts-tunnel.xml  relay.torrc  torflow.config.xml
src/torflow/example/configs/: minimal.config.xml  small.config.xml  tiny.config.xml
src/torflow/scripts/: analyze-sniper.py  makesnipers.py  parse-hs.py  parse-hsdat.py  parse.py  plot-defense-paper.py  plot-scalability-paper.py  plot-scalability.py  plot-speed-paper.py  plot-speed.py  plotnode.py  plotram.py  print-max-bw.py
src/torflow/scripts/deanonymization/: hidden_service_deanonymization.py  notebook.py
tools/: add_torctl_to_xml.py  analyze.py  continuous_integration_test.sh  convert_1.9.2_to_1.10.0.sh  convert_to_dlmopen.py  generate.py  parse-torctl.py  parse-torperf.py  parsealexa.py  patch.sh  print_position_vote_configs.py  tgen_generate_configs.py  tgen_replace_filetransfer.py  tor_convert_args.py  tor_create_v3bw.py  tor_update_bwrate.py
